chore: get rid of some IntelliJ warnings